force-app/main/default/objects/Payment__c/fields/Batch_Info__c.field-meta.xml
<CustomField>
    <fullName>Batch_Info__c</fullName>
    <formula>Batch__r.Name &amp; &quot;--&quot; &amp; TEXT(MONTH(Batch__r.Accounting_Period__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Batch__r.Accounting_Period__c)) &amp; &quot;--&quot; &amp; Batch__r.RecordType.Name &amp; &quot;--&quot; &amp; TEXT(Batch__r.Batch_Status__c)</formula>
    <label>Batch Info</label>
    <type>Text</type>
</CustomField>