force-app/main/default/objects/Payment__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <description>contracted value before additions/deductions</description>
    <inlineHelpText>contracted value before additions/deductions</inlineHelpText>
    <label>Total Contract Value</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>