force-app/main/default/objects/Payment__c/fields/Energy_Reserve_Tax__c.field-meta.xml
<CustomField>
    <fullName>Energy_Reserve_Tax__c</fullName>
    <label>Total Energy Reserve Tax</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>