force-app/main/default/objects/Payment__c/fields/Gross_Production_Tax__c.field-meta.xml
<CustomField>
    <fullName>Gross_Production_Tax__c</fullName>
    <label>Total Gross Production Tax</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>