force-app/main/default/objects/Payment__c/fields/Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>Gross_Value__c</fullName>
    <description>pre-tax value</description>
    <inlineHelpText>pre-tax value</inlineHelpText>
    <label>Total Gross Value</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>