force-app/main/default/objects/Payment__c/fields/Is_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Is_Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reversal</label>
    <type>Checkbox</type>
</CustomField>