force-app/main/default/objects/Payment__c/fields/Marginal_Gas_Tax__c.field-meta.xml
<CustomField>
    <fullName>Marginal_Gas_Tax__c</fullName>
    <label>Total Marginal Gas Tax</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>