force-app/main/default/objects/Payment__c/fields/Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Value__c</fullName>
    <description>actual payment amount</description>
    <inlineHelpText>actual payment amount</inlineHelpText>
    <label>Total Net Value</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>