force-app/main/default/objects/Payment__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Payee Name</label>
    <type>Text</type>
</CustomField>