force-app/main/default/objects/Payment__c/fields/Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period__c</fullName>
    <label>Payment Period</label>
    <type>Date</type>
</CustomField>