force-app/main/default/objects/Payment__c/fields/Production_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Production_Excise_Tax__c</fullName>
    <label>Total Production Excise Tax</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>