force-app/main/default/objects/Payment__c/fields/Volume_MCF_Calc__c.field-meta.xml
<CustomField>
    <fullName>Volume_MCF_Calc__c</fullName>
    <formula>IF(ISBLANK( Volume_MCF__c ),Volume_MMBtu__c, Volume_MCF__c)</formula>
    <label>Total Volume MCF Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>