force-app/main/default/objects/Payment__c/fields/Volume_MMBtu__c.field-meta.xml
<CustomField>
    <fullName>Volume_MMBtu__c</fullName>
    <label>Total Volume MMBtu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>