force-app/main/default/objects/Payment__c/recordTypes/Payment_Amount.recordType-meta.xml
<RecordType>
    <fullName>Payment_Amount</fullName>
    <active>true</active>
    <label>Payment Amount</label>
</RecordType>