force-app/main/default/objects/Payment__c/recordTypes/Payment_Deck.recordType-meta.xml
<RecordType>
    <fullName>Payment_Deck</fullName>
    <active>true</active>
    <label>Payment Deck</label>
</RecordType>