force-app/main/default/objects/Payment__c/listViews/Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Created_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Gross_Value__c</columns>
    <columns>Taxes__c</columns>
    <columns>Net_Value__c</columns>
    <columns>Volume_MMBtu__c</columns>
    <columns>Volume_MCF_Calc__c</columns>
    <columns>Volume_MCF__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Created This Week</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
        <role>Producer_Services_Administration</role>
        <role>Producer_Services_Management</role>
        <role>Producer_Services_Sales</role>
    </sharedTo>
</ListView>